--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.13.1",
     "react-dice-complete": "^1.2.0",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.4.1",
+    "react-tooltip": "^4.2.8",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
