--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,8 +12,10 @@
     "react-dice-complete": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "3.4.1",
     "react-tooltip": "^4.2.8",
+    "redux": "^4.1.0",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
