--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
   },
   "devDependencies": {
     "compression-webpack-plugin": "^4.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-redux": "^3.3.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-bundle-analyzer": "^3.8.0"
   }
