--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy-firebase": "npm run build && firebase deploy",
-    "deploy-aws": "npm run build && npm run serve"
+    "deploy-firebase": "npm run build && firebase deploy"
   },
   "browserslist": {
     "production": [
